Weekly report done

--- a/example.env
+++ b/example.env
@@ -1,3 +1,15 @@
 SQLITE_DB_PATH=moodmate_db/mood_mate.db
 
-TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
+TELEGRAM_BOT_TOKEN='********:********'
+# For production, set the logging leve to INFO
+MOOD_BOT_LOGGING_LEVEL=DEBUG
+
+ADMIN_CHATS="@mood_mate_admins"
+
+MOOD_MATE_REDIS_HOST=mood_mate_redis
+
+DEBUG_MODE=True
+
+USE_OPTIMIZED_PLOTTING=True
+
+OPENAI_API_KEY=sk-********
