--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 # exclude: '\.tsv$|\.csv$|\.maf'
 default_language_version:
-    python: python3.10
+    python: python3.11
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
@@ -14,11 +14,11 @@ repos:
     -   id: no-commit-to-branch
         args:
             [--branch, master]
+# -   repo: https://github.com/psf/black
+#     rev: 24.3.0
+#     hooks:
+#     -   id: black
 -   repo: https://github.com/timothycrosley/isort
     rev: 5.12.0
     hooks:
     -   id: isort
--   repo: https://github.com/psf/black
-    rev: 22.3.0
-    hooks:
-    -   id: black
