--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,11 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_HOMESERVER_PRIVATE_KEY }}
 
       - name: Add server to known hosts
+        env:
+          SERVER_IP: ${{ secrets.SERVER_IP }}
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts
 
 
       - name: Deploy to server
