--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,15 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_HOMESERVER_PRIVATE_KEY }}
 
-      - name: Add server to known hosts
-        env:
-          SERVER_IP: ${{ secrets.SERVER_IP }}
-          SERVER_PORT: ${{ secrets.SERVER_PORT }}
+      - name: Set up known hosts
         run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -p $SERVER_PORT -H $SERVER_IP >> ~/.ssh/known_hosts
+            mkdir -p ~/.ssh
+            echo "${{ secrets.SERVER_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+            ssh-keyscan -p ${{ secrets.SERVER_PORT }} -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+        env:
+            SERVER_IP: ${{ secrets.SERVER_IP }}
+            SERVER_PORT: ${{ secrets.SERVER_PORT }}
 
 
       - name: Deploy to server
