--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Set up known hosts
         run: |
             mkdir -p ~/.ssh
-            echo "${{ secrets.SERVER_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+            echo "${{ secrets.SERVER_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
             chmod 600 ~/.ssh/id_rsa
-            ssh-keyscan -p ${{ secrets.SERVER_PORT }} -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+            ssh-keyscan -p $SERVER_PORT -H $SERVER_IP >> ~/.ssh/known_hosts
         env:
             SERVER_IP: ${{ secrets.SERVER_IP }}
             SERVER_PORT: ${{ secrets.SERVER_PORT }}
